--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
 - complete dummy dataset generator
 - define functions for pulling skillsets and preferences according to slices
 - hook up views
+    - login views
+    - 
+    - calendar views
+    - set preference views
